ajustes dirección disparos

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,8 @@
 
         //captura la pulsacion de teclas
         window.onload = function () {
-          
+          document.getElementById("numarma1").innerHTML=maxNumShots;
+          document.getElementById("numarma2").innerHTML=maxNumShots;
         }
     </script>
     <link rel="stylesheet" href="style.css">
