--- a/client/index.html
+++ b/client/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <ul class="right hide-on-med-and-down">
                     <li style="display: none;" id="navInstructions">
-                        <a target="parent" href="./docs/documentacion.pdf" class="tooltipped" data-position="bottom" data-tooltip="Intrucciones">
+                        <a target="parent" href="./docs/instrucciones.pdf" class="tooltipped" data-position="bottom" data-tooltip="Intrucciones">
                             <i class="material-icons ">info</i>
                         </a>
                     </li>
@@ -95,7 +95,7 @@
                 <h2 class="game-title ">Ball War</h2>
             </div>
             <div class="actions-buttons" id="gameButtons">
-                <a class="waves-effect waves-light btn-large orange darken-1 game-actions">
+                <a target="parent" href="./docs/instrucciones.pdf" class="waves-effect waves-light btn-large orange darken-1 game-actions">
                     <i class="material-icons left">info</i>
                     Instrucciones
                 </a>
@@ -193,7 +193,7 @@
             <div id="misonido" style="display:none"></div>
 
             <div id="reloj"></div>
-            <img src="warj/explocion.gif" id="explocionmina" />
+            <img src="ballwar/explocion.gif" id="explocionmina" />
 
         </div>
         <div id="recibe"></div>
