--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
      <!-- Materialize css y jquery -->
-     <link rel="stylesheet" href="libreriasExternas/materialize.min.css">
+     <link rel="stylesheet" href="libraries/materialize.min.css">
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-     <script src="libreriasExternas/jquery.min.js"></script>
-     <script src="libreriasExternas/materialize.min.js"></script>
+     <script src="libraries/jquery.min.js"></script>
+     <script src="libraries/materialize.min.js"></script>
 
     <!-- Estilos de la aplicación-->
     <link rel="icon" href="img/logoUdea.png" type="image/gif" sizes="16x16">
