--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
     <!-- Estilos de la aplicación-->
     <link rel="icon" href="img/logoUdea.png" type="image/gif" sizes="16x16">
     <link href="./css/index.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 
     <script src="client.js"></script>
     <script src="game.js"></script>
@@ -36,7 +37,7 @@
           $("#test-swipe-1,#p5").css("min-height", (window.innerHeight - 200) + "px")
         }
     </script>
-    <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body id="mibod">
