actualización de archivos

--- a/client/index.html
+++ b/client/index.html
@@ -59,7 +59,7 @@
             </div>
         </li>
 
-        <li class="copy-right">Victor Cardona Vera © 2020</li>
+        <li class="copy-right">Victor Cardona Vera y Anderson Herrera © 2020</li>
     </ul>
 
     <div id="inicio">
